SOCINT-136: Remove Census from RHUI Update to 'expired' page to change message, and further sweep to remove 'census' from content Update DS version to 41.0.2, and fix missing prefixing in register.html

--- a/app/templates/closed.html
+++ b/app/templates/closed.html
@@ -3,10 +3,10 @@
 {%- block main -%}
 
     <h1>
-        {{ _('This survey has closed') }}
+        {{ _('This study has closed') }}
     </h1>
 
-    <p>{{ _('Your access code is for a survey that has now closed.') }}</p>
+    <p>{{ _('Your access code is for a study that has now closed.') }}</p>
 
     <p>{{ _('Thank you for your help.') }}</p>
 
