--- a/app/templates/request-code-select-how-to-receive.html
+++ b/app/templates/request-code-select-how-to-receive.html
@@ -71,7 +71,7 @@
     }}
 
     {%- autoescape false -%}
-        <p>{{ _('To request a census in a different format or for further help, please %(open)scontact us%(close)s.', open='<a href="%s">' % contact_us_link, close='</a>')|safe }}</p>
+        <p>{{ _('To request a study in a different format or for further help, please %(open)scontact us%(close)s.', open='<a href="%s">' % contact_us_link, close='</a>')|safe }}</p>
     {%- endautoescape -%}
 
 {%- endblock -%}
