--- a/app/templates/request-code-sent-by-post.html
+++ b/app/templates/request-code-sent-by-post.html
@@ -37,7 +37,7 @@
             'type': 'button',
             'text': _('Done'),
             'classes': 'ons-u-mt-xl',
-            'url': census_home_link
+            'url': home_link
         })
     }}
 
