--- a/app/templates/request-code-sent-by-text.html
+++ b/app/templates/request-code-sent-by-text.html
@@ -34,7 +34,7 @@
         })
     -%}
 
-        <p>{{ _('The text will be sent from <strong>Census2021</strong>') }}</p>
+        <p>{{ _('The text will be sent from <strong>ONS</strong>') }}</p>
 
     {%- endcall -%}
 
