--- a/app/templates/signed-out.html
+++ b/app/templates/signed-out.html
@@ -27,7 +27,7 @@
     -%}
 
         {%- autoescape false -%}
-            <p>{{ _('Keep your 16-character access code safe. You will need to enter it again to %(open)saccess your census%(close)s.', open='<a href="%s">' % start_link, close='</a>')|safe }}</p>
+            <p>{{ _('Keep your 16-character access code safe. You will need to enter it again to %(open)saccess your study%(close)s.', open='<a href="%s">' % start_link, close='</a>')|safe }}</p>
         {%- endautoescape -%}
 
     {%- endcall -%}
