--- a/app/templates/web-form.html
+++ b/app/templates/web-form.html
@@ -48,7 +48,7 @@
                 {
                     'id': 'missing_information',
                     'label': {
-                        'text': _('I don’t have everything I need to complete my census')
+                        'text': _('I don’t have everything I need to complete my study')
                     },
                     'value': 'MISSING_INFORMATION'
                 },
@@ -62,7 +62,7 @@
                 {
                     'id': 'form',
                     'label': {
-                        'text': _('I need help with my census form')
+                        'text': _('I need help with my study form')
                     },
                     'value': 'FORM'
                 },
