--- a/app/templates/start-timeout.html
+++ b/app/templates/start-timeout.html
@@ -9,11 +9,11 @@
     <p>{{ _('This is because you’ve either:') }}</p>
     <ul>
         <li>{{ _('been inactive for 45 minutes and your session has timed out to protect your information') }}</li>
-        <li>{{ _('followed a link to the middle of a census questionnaire') }}</li>
+        <li>{{ _('followed a link to the middle of a study questionnaire') }}</li>
     </ul>
 
     {% autoescape false %}
-        <p>{{ _('You need to %(open)senter your 16-character access code%(close)s to access your census.', open='<a href="%s">' % index_url, close='</a>')|safe }}</p>
+        <p>{{ _('You need to %(open)senter your 16-character access code%(close)s to access your study.', open='<a href="%s">' % index_url, close='</a>')|safe }}</p>
     {% endautoescape %}
 
 {% endblock %}
