--- a/app/templates/register-complete.html
+++ b/app/templates/register-complete.html
@@ -15,7 +15,7 @@
     -%}
 
         {%- autoescape false -%}
-            <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('Your children have been registered for the survey') }}</h1>
+            <h1 class="ons-u-mb-xs ons-u-fs-l">{{ _('Your child has been registered for the survey') }}</h1>
         {%- endautoescape -%}
 
         <p>{{ _('A text message confirming your registration should arrive soon') }}</p>
