SOCINT-216: UI updates for SOCINT-119 caseDTO changes Added tweak to no js postcode input (missed change from DS update)

--- a/app/templates/request-code-enter-address.html
+++ b/app/templates/request-code-enter-address.html
@@ -43,7 +43,7 @@
                     'id': 'postcode',
                     'type': 'text',
                     'autocomplete': 'postal-code',
-                    'classes': 'input--w-6',
+                    'width': 6,
                     'label': {
                         'text': _('UK postcode')
                     },
