SOCINT-253 Update DS Up to date with 44.0.0, but needs next release due to known jinja bug

--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -9,7 +9,8 @@
 {%- if ('/start/' in page_url) and (page_url != '/start/') and (timeout != 'true') -%}
     {%- set signout_button_value = {
             'text': 'Exit',
-            'buttonStyle': 'exit',
+            'iconType': 'exit',
+            'iconPosition': 'after',
             'url': url('StartExit:get', display_region='en')
         }
     -%}
