--- a/app/templates/register-complete.html
+++ b/app/templates/register-complete.html
@@ -8,7 +8,7 @@
         call onsPanel({
             'type': 'success',
             'id': 'success-id',
-            'icon': 'check',
+            'iconType': 'check',
             'iconSize': 'l',
             'classes': 'ons-u-mt-xl ons-u-mb-m'
         })
@@ -25,7 +25,7 @@
     {%-
         call onsPanel({
             'type': 'bare',
-            'icon': 'lock',
+            'iconType': 'lock',
             'classes': 'ons-u-mb-l'
         })
     -%}
