--- a/app/templates/request-code-sent-by-post.html
+++ b/app/templates/request-code-sent-by-post.html
@@ -20,7 +20,7 @@
         call onsPanel({
             'type': 'success',
             'id': 'success-id',
-            'icon': 'check',
+            'iconType': 'check',
             'iconSize': 'l',
             'classes': 'ons-u-mt-xl'
         })
