--- a/app/templates/signed-out.html
+++ b/app/templates/signed-out.html
@@ -10,7 +10,7 @@
         call onsPanel({
             'type': 'success',
             'id': 'success-id',
-            'icon': 'check',
+            'iconType': 'check',
             'iconSize': 'xl',
         })
     -%}
