--- a/app/templates/web-form-success.html
+++ b/app/templates/web-form-success.html
@@ -49,7 +49,7 @@
         onsPanel({
             'type': 'success',
             'id': 'success-id',
-            'icon': 'check',
+            'iconType': 'check',
             'body': panel_content|safe,
             'classes': 'ons-u-mb-m'
         })
