--- a/app/templates/request-code-sent-by-text.html
+++ b/app/templates/request-code-sent-by-text.html
@@ -12,7 +12,7 @@
         call onsPanel({
             'type': 'success',
             'id': 'success-id',
-            'icon': 'check',
+            'iconType': 'check',
             'iconSize': 'l',
             'classes': 'ons-u-mt-xl ons-u-mb-m'
         })
@@ -29,7 +29,7 @@
     {%-
         call onsPanel({
             'type': 'bare',
-            'icon': 'lock',
+            'iconType': 'lock',
             'classes': 'ons-u-mb-l'
         })
     -%}
