SOCINT-266 Adds request code by email functionality

--- a/app/templates/request-code-select-how-to-receive.html
+++ b/app/templates/request-code-select-how-to-receive.html
@@ -36,6 +36,14 @@
                 'description': post_description
             },
             'value': 'post'
+        },
+        {
+            'id': 'email',
+            'label': {
+                'text': _('Email'),
+                'description': _('We will need your email address for this')
+            },
+            'value': 'email'
         }
     ]
 -%}
