Put todos in for links to request a new access code

--- a/app/templates/start-uac-already-used.html
+++ b/app/templates/start-uac-already-used.html
@@ -7,7 +7,7 @@
     <p>{{ _('Someone has already submitted a response using this access code.') }}</p>
 
     {%- autoescape false -%}
-        <p>{{ _('If you need to start your study again, you can %(open)srequest a new access code%(close)s.', open='<a href="%s">' % request_code_link, close='</a>')|safe }}</p>
+        <p>{{ _('TODO: Link or phone number to let people access new code?') }}</p>
     {%- endautoescape -%}
 
 {%- endblock main -%}
