--- a/app/templates/start-uac-inactive.html
+++ b/app/templates/start-uac-inactive.html
@@ -6,7 +6,7 @@
         {{ _('This access code has been marked inactive') }}
     </h1>
 {#TODO: Link to request new UAC?#}
-    <p>{{ _('Please request another access code if required {Link Here}') }}</p>
+    <p>{{ _('TODO: Link or phone number to let people access new code?') }}</p>
 
     <p>{{ _('Thank you for your help.') }}</p>
 
