--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -55,8 +55,7 @@
             }
         ],
         'copyrightDeclaration': {
-            'copyright': 'Crown copyright and database rights 2020 OS 100019153.',
-            'text': 'Use of address data is subject to the terms and conditions.'
+            'copyright': 'Crown copyright and database rights 2020 OS 100019153.'
         }
     }
 -%}
