add TODO comments for UAC inactive/receipted

--- a/app/templates/start-uac-already-used.html
+++ b/app/templates/start-uac-already-used.html
@@ -6,8 +6,6 @@
 
     <p>{{ _('Someone has already submitted a response using this access code.') }}</p>
 
-    {%- autoescape false -%}
-        <p>{{ _('TODO: Link or phone number to let people access new code?') }}</p>
-    {%- endautoescape -%}
+{#TODO: Content design to redirect to phone number/page to query this etc#}
 
 {%- endblock main -%}
