--- a/app/templates/start-uac-inactive.html
+++ b/app/templates/start-uac-inactive.html
@@ -5,8 +5,7 @@
     <h1>
         {{ _('This access code has been marked inactive') }}
     </h1>
-{#TODO: Link to request new UAC?#}
-    <p>{{ _('TODO: Link or phone number to let people access new code?') }}</p>
+{#TODO: Needs content design say your UAC is inactive, and support line number/page#}
 
     <p>{{ _('Thank you for your help.') }}</p>
 
