--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -77,6 +77,7 @@
     }}
 
     {{ onsButton({
+        'id': 'submitUACBtn',
         'text': _('Access survey'),
         'classes': 'ons-u-mb-xl',
         'name': 'action[save_continue]',
