--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -16,7 +16,7 @@
         <p>Some parts of surveys.ons.gov.uk may use additional cookies and will have their own cookie policy and
             banner.</p>
     {% endcall %}
-    <h1 class="ons-u-fs-xxl">Cookies on surveys.ons.gov.uk</h1>
+    <h1 class="ons-u-fs-xxl">Cookies on TODO:FIND OUT URL</h1>
     <p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
     <p>We use cookies to store information about how you use this service, such as the pages you visit.</p>
     <h2>Cookie settings</h2>
@@ -82,7 +82,7 @@
                                         "value": "<code>_ga</code>"
                                     },
                                     {
-                                        "value": 'This helps us count how many people visit surveys.ons.gov.uk by tracking if you’ve visited before'
+                                        "value": 'This helps us count how many people visit TODO:GET URL NAME by tracking if you’ve visited before'
                                     },
                                     {
                                         "value": "2 years"
@@ -95,7 +95,7 @@
                                         "value": "<code>_gid</code>"
                                     },
                                     {
-                                        "value": 'This helps us count how many people visit surveys.ons.gov.uk by tracking if you’ve visited before'
+                                        "value": 'This helps us count how many people visit TODO:GET URL NAME by tracking if you’ve visited before'
                                     },
                                     {
                                         "value": "24 hours"
