--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -13,10 +13,10 @@
             "type": "success"
         }) %}
         <h2>Your cookie settings have been saved</h2>
-        <p>Some parts of surveys.ons.gov.uk may use additional cookies and will have their own cookie policy and
+        <p>Some parts of start.surveys.ons.gov.uk may use additional cookies and will have their own cookie policy and
             banner.</p>
     {% endcall %}
-    <h1 class="ons-u-fs-xxl">Cookies on TODO:FIND OUT URL</h1>
+    <h1 class="ons-u-fs-xxl">Cookies on start.surveys.ons.gov.uk</h1>
     <p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
     <p>We use cookies to store information about how you use this service, such as the pages you visit.</p>
     <h2>Cookie settings</h2>
@@ -47,7 +47,7 @@
                             "text": 'how you got to the site'
                         },
                         {
-                            "text": 'the pages you visit on surveys.ons.gov.uk and how long you spend on each page'
+                            "text": 'the pages you visit on start.surveys.ons.gov.uk and how long you spend on each page'
                         },
                         {
                             "text": "what you click on while you're visiting the site"
@@ -82,7 +82,7 @@
                                         "value": "<code>_ga</code>"
                                     },
                                     {
-                                        "value": 'This helps us count how many people visit TODO:GET URL NAME by tracking if you’ve visited before'
+                                        "value": 'This helps us count how many people visit start.surveys.ons.gov.uk by tracking if you’ve visited before'
                                     },
                                     {
                                         "value": "2 years"
@@ -95,7 +95,7 @@
                                         "value": "<code>_gid</code>"
                                     },
                                     {
-                                        "value": 'This helps us count how many people visit TODO:GET URL NAME by tracking if you’ve visited before'
+                                        "value": 'This helps us count how many people visit start.surveys.ons.gov.uk by tracking if you’ve visited before'
                                     },
                                     {
                                         "value": "24 hours"
@@ -329,7 +329,7 @@
                         ]
                     }) }}
                 <h4>Cookie message</h4>
-                <p>You may see a banner when you visit surveys.ons.gov.uk inviting you to accept cookies or review your
+                <p>You may see a banner when you visit start.surveys.ons.gov.uk inviting you to accept cookies or review your
                     settings. We’ll set cookies so that your computer knows you’ve seen it and not to show it again, and
                     also to store your settings.</p>
                 {{ onsTable({
