--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -38,7 +38,7 @@
                 'itemsList': [
                     {
                         'text': 'Cwcis',
-                        'url': domain_url_cy + '/cwcis/'
+                        'url': domain_url_cy + '/cookies/'
                     },
                     {
                         'text': 'Datganiad hygyrchedd',
@@ -46,7 +46,7 @@
                     },
                     {
                         'text': 'Preifatrwydd a diogelu data',
-                        'url': domain_url_cy + '/preifatrwydd-a-diogelu-data/'
+                        'url': domain_url_cy + '/privacy-and-data-protection/'
                     },
                     {
                         'text': 'Telerau ac amodau',
@@ -116,9 +116,9 @@
     {{
         onsCookiesBanner({
             'statementTitle': 'Dywedwch wrthym a ydych yn derbyn cwcis',
-            'statementText': "Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cwcis" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",
-            'confirmationText': 'Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cwcis' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',
-            'secondaryButtonUrl': domain_url_cy + '/cwcis',
+            'statementText': "Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",
+            'confirmationText': 'Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',
+            'secondaryButtonUrl': domain_url_cy + '/cookies/',
             'primaryButtonText': "Derbyn yr holl gwcis",
             'secondaryButtonText': "Gosod dewisiadau o ran cwcis",
             'confirmationButtonText': 'Cuddio hwn'
