Updated ID name

--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -77,7 +77,7 @@
     }}
 
     {{ onsButton({
-        'id': 'submitUACBtn',
+        'id': 'submit_uac_btn',
         'text': _('Access survey'),
         'classes': 'ons-u-mb-xl',
         'name': 'action[save_continue]',
