Changed contact us link to standard ONS one

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -28,7 +28,7 @@
                     },
                     {
                         'text': 'Cysylltu â ni',
-                        'url': domain_url_cy + '/cysylltu-a-ni/'
+                        'url': 'https://cy.ons.gov.uk/aboutus/contactus/surveyenquiries'
                     }
                 ]
             }
