--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -27,7 +27,7 @@
                     },
                     {
                         'text': 'Contact us',
-                        'url': domain_url_en + '/contact-us/'
+                        'url': 'https://www.ons.gov.uk/aboutus/contactus/surveyenquiries'
                     }
                 ]
             }
