--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -23,11 +23,11 @@
                 'itemsList': [
                     {
                         'text': 'About ONS studies',
-                        'url': domain_url_en + '/studies/'
+                        'url': 'https://www.ons.gov.uk/surveys/informationforhouseholdsandindividuals'
                     },
                     {
                         'text': 'Contact us',
-                        'url': domain_url_en + '/contact-us/'
+                        'url': 'https://www.ons.gov.uk/aboutus/contactus/surveyenquiries'
                     }
                 ]
             }
@@ -41,16 +41,12 @@
                     },
                     {
                         'text': 'Accessibility statement',
-                        'url': domain_url_en + '/accessibility-statement/'
+                        'url': 'https://www.ons.gov.uk/help/accessibility'
                     },
                     {
                         'text': 'Privacy and data protection',
                         'url': domain_url_en + '/privacy-and-data-protection/'
                     },
-                    {
-                        'text': 'Terms and conditions',
-                        'url': domain_url_en + '/terms-and-conditions/'
-                    }
                 ]
             }
         ],
