--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -35,7 +35,6 @@
         onsUACInput({
             'id': 'uac',
             'name': 'uac',
-            'postTextboxLinkText': _('Your personal access code can be found in the letter or email you received which linked you to this survey.'),
             'label': {
                 'text': _('Enter your 16-character access code'),
                 'description': _('Keep this code safe. You will need to enter it every time you access your study')
@@ -47,11 +46,32 @@
 
     {{ onsButton({
         'id': 'submit_uac_btn',
-        'text': _('Access survey'),
+        'text': _('Access study'),
         'classes': 'ons-u-mb-xl',
         'name': 'action[save_continue]',
         'submitType': 'loader'
     }) }}
 
+    {%- set content -%}
+        <p>{{ _('Telephone: +44 800 085 7376<br>8am to 7pm Monday to Friday<br>8am to 1pm Saturday') }}</p>
+        <p>{{ _('Minicom (for the deaf and hearing impaired): 18001 +44 800 085 7376') }}</p>
+        <p>{{ _('Email: <a href="mailto: surveyfeedback@ons.gov.uk">surveyfeedback@ons.gov.uk</a>') }}</p>
+    {%- endset -%}
+
+    <h2 class="ons-u-fs-xl ons-u-mt-l">{{_('Where to find your access code')}}</h2>
+    <p>{{ _('Your access code can be found in the invitation letter or email you received.') }}</p>
+
+    {%- call onsCollapsible({
+        'id': 'collapsible',
+        'title': _('Who can I contact for assistance or further information?'),
+        'titleTag': 'h2',
+        'button': {
+            'close': _('Hide this'),
+            'contextSuffix': 'content'
+        }
+        })
+    -%}
+        {{ content | safe }}
+    {%- endcall -%}
 
 {% endblock %}
