Fix to displaying the chosen cookie choices

--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -6,6 +6,8 @@
 {% from "components/table/_macro.njk" import onsTable %}
 {% from "components/lists/_macro.njk" import onsList %}
 
+{% set page_title = "Cookies on start.surveys.ons.gov.uk" %}
+
 {%- block main -%}
 
     {% call onsPanel({
@@ -15,6 +17,7 @@
         <h2>Your cookie settings have been saved</h2>
         <p>Some parts of start.surveys.ons.gov.uk may use additional cookies and will have their own cookie policy and
             banner.</p>
+        <a class="ons-js-return-link ons-u-mt-s ons-u-dib" href="#0">Return to previous page</a>
     {% endcall %}
     <h1 class="ons-u-fs-xxl">Cookies on start.surveys.ons.gov.uk</h1>
     <p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
