remove language toggle

--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -67,16 +67,21 @@
                 'current': true
             },
             {
-                'url': '/cy' + page_url,
-                'ISOCode': 'cy',
-                'text': 'Cymraeg',
-                'buttonAriaLabel': 'Dewisydd iaith. Iaith gyfredol: Cymraeg',
-                'chooseLanguage': 'Dewiswch iaith',
-                'allLanguages': 'Pob iaith',
                 'current': false
             }
         ]
 }-%}
+
+{#    LANGUAGEE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
+{#                'url': '/cy' + page_url,#}
+{#                'ISOCode': 'cy',#}
+{#                'text': 'Cymraeg',#}
+{#                'buttonAriaLabel': 'Dewisydd iaith. Iaith gyfredol: Cymraeg',#}
+{#                'chooseLanguage': 'Dewiswch iaith',#}
+{#                'allLanguages': 'Pob iaith',#}
+{#                'current': false#}
+
+
 {%- endif -%}
 
 {%- set pageConfig = {
