--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -75,17 +75,20 @@
                 'current': true
             },
             {
-                'url': '/en' + page_url,
-                'ISOCode': 'en',
-                'text': 'English',
-                'buttonAriaLabel': 'Language selector. Current language: English',
-                'chooseLanguage': 'Choose language',
-                'allLanguages': 'All languages',
                 'current': false
             }
         ]
 }
     -%}
+{#    LANGUAGEE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
+{#                    'url': '/en' + page_url,
+{#                'ISOCode': 'en',
+{#                'text': 'English',
+{#                'buttonAriaLabel': 'Language selector. Current language: English',
+{#                'chooseLanguage': 'Choose language',
+{#                 'allLanguages': 'All languages',#}
+{#                 'current': false#}
+
 {%- endif -%}
 
 {%- set pageConfig = {
