--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -72,7 +72,7 @@
         ]
 }-%}
 
-{#    LANGUAGEE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
+{#    LANGUAGE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
 {#                'url': '/cy' + page_url,#}
 {#                'ISOCode': 'cy',#}
 {#                'text': 'Cymraeg',#}
