--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -80,7 +80,7 @@
         ]
 }
     -%}
-{#    LANGUAGEE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
+{#    LANGUAGE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
 {#                    'url': '/en' + page_url,
 {#                'ISOCode': 'en',
 {#                'text': 'English',
