--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -8,7 +8,7 @@
 
 {%- if ('/start/' in page_url) and (page_url != '/start/') and (timeout != 'true') -%}
     {%- set signout_button_value = {
-            'text': 'Gadael',
+            'text': 'PLACEHOLDER WELSH Gadael',
             'iconType': 'exit',
             'iconPosition': 'after',
             'url': url('StartExit:get', display_region='cy')
@@ -27,7 +27,7 @@
                         'url': domain_url_cy + '/studies/'
                     },
                     {
-                        'text': 'Cysylltu â ni',
+                        'text': 'PLACEHOLDER WELSH Cysylltu â ni',
                         'url': 'https://cy.ons.gov.uk/aboutus/contactus/surveyenquiries'
                     }
                 ]
@@ -37,27 +37,27 @@
             {
                 'itemsList': [
                     {
-                        'text': 'Cwcis',
+                        'text': 'PLACEHOLDER WELSH Cwcis',
                         'url': domain_url_cy + '/cookies/'
                     },
                     {
-                        'text': 'Datganiad hygyrchedd',
+                        'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
                         'url': domain_url_cy + '/datganiad-hygyrchedd/'
                     },
                     {
-                        'text': 'Preifatrwydd a diogelu data',
+                        'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
                         'url': domain_url_cy + '/privacy-and-data-protection/'
                     },
                     {
-                        'text': 'Telerau ac amodau',
+                        'text': 'PLACEHOLDER WELSH Telerau ac amodau',
                         'url': domain_url_cy + '/telerau-ac-amodau/'
                     }
                 ]
             }
         ],
         'copyrightDeclaration': {
-            'copyright': 'Hawlfraint y Goron a hawliau cronfa ddata 2020 Arolwg Ordnans 100019153.',
-            'text': 'Mae defnydd o ddata ar gyfeiriadau yn amodol ar y telerau ac amodau.'
+            'copyright': 'PLACEHOLDER WELSH Hawlfraint y Goron a hawliau cronfa ddata 2020 Arolwg Ordnans 100019153.',
+            'text': 'PLACEHOLDER WELSH Mae defnydd o ddata ar gyfeiriadau yn amodol ar y telerau ac amodau.'
         }
     }
 -%}
@@ -68,10 +68,10 @@
             {
                 'url': '/cy' + page_url,
                 'ISOCode': 'cy',
-                'text': 'Cymraeg',
-                'buttonAriaLabel': 'Dewisydd iaith. Iaith gyfredol: Cymraeg',
-                'chooseLanguage': 'Dewiswch iaith',
-                'allLanguages': 'Pob iaith',
+                'text': 'PLACEHOLDER WELSH Cymraeg',
+                'buttonAriaLabel': 'PLACEHOLDER WELSH Dewisydd iaith. Iaith gyfredol: Cymraeg',
+                'chooseLanguage': 'PLACEHOLDER WELSH Dewiswch iaith',
+                'allLanguages': 'PLACEHOLDER WELSH Pob iaith',
                 'current': true
             },
             {
