loads more PLACEHOLDER WELSH  and add 'translations'

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -23,7 +23,7 @@
             {
                 'itemsList': [
                     {
-                        'text': 'About ONS studies',
+                        'text': 'PLACEHOLDER WELSH About ONS studies',
                         'url': domain_url_cy + '/studies/'
                     },
                     {
