--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -118,13 +118,13 @@
     {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}
     {{
         onsCookiesBanner({
-            'statementTitle': 'Dywedwch wrthym a ydych yn derbyn cwcis',
-            'statementText': "Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",
-            'confirmationText': 'Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',
+            'statementTitle': 'PLACEHOLDER WELSH Dywedwch wrthym a ydych yn derbyn cwcis',
+            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",
+            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',
             'secondaryButtonUrl': domain_url_cy + '/cookies/',
-            'primaryButtonText': "Derbyn yr holl gwcis",
-            'secondaryButtonText': "Gosod dewisiadau o ran cwcis",
-            'confirmationButtonText': 'Cuddio hwn'
+            'primaryButtonText': "PLACEHOLDER WELSH Derbyn yr holl gwcis",
+            'secondaryButtonText': "PLACEHOLDER WELSH Gosod dewisiadau o ran cwcis",
+            'confirmationButtonText': 'PLACEHOLDER WELSH Cuddio hwn'
         })
     }}
 {%- endblock -%}
