--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -118,13 +118,25 @@
     {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}
     {{
         onsCookiesBanner({
-            'statementTitle': 'PLACEHOLDER WELSH Dywedwch wrthym a ydych yn derbyn cwcis',
-            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",
-            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',
-            'secondaryButtonUrl': domain_url_cy + '/cookies/',
-            'primaryButtonText': "PLACEHOLDER WELSH Derbyn yr holl gwcis",
-            'secondaryButtonText': "PLACEHOLDER WELSH Gosod dewisiadau o ran cwcis",
-            'confirmationButtonText': 'PLACEHOLDER WELSH Cuddio hwn'
+            'lang': 'cy'
         })
     }}
 {%- endblock -%}
+
+{#TODO: PLACEHOLDER WELSH  Old below: But we're calling design system, so should be able to read theirs. Below did little as different vars now #}
+{#{%- block preHeader -%}#}
+{##}
+{#    {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}#}
+{#    {{#}
+{#        onsCookiesBanner({#}
+{#            'statementTitle': 'PLACEHOLDER WELSH Dywedwch wrthym a ydych yn derbyn cwcis',#}
+{#            'statementText': "PLACEHOLDER WELSH Rydym ni’n defnyddio <a href='" + domain_url_cy + "/cookies/" + "'>cwcis i gasglu gwybodaeth</a> am y ffordd rydych chi’n defnyddio cy.ons.gov.uk. Rydym ni’n defnyddio’r wybodaeth hon i sicrhau bod y wefan yn gweithio cystal â phosibl ac i wella ein gwasanaethau.",#}
+{#            'confirmationText': 'PLACEHOLDER WELSH Rydych chi wedi derbyn yr holl gwcis. Gallwch chi <a href="' + domain_url_cy + '/cookies/' + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.',#}
+{#            'secondaryButtonUrl': domain_url_cy + '/cookies/',#}
+{#            'primaryButtonText': "PLACEHOLDER WELSH Derbyn yr holl gwcis",#}
+{#            'secondaryButtonText': "PLACEHOLDER WELSH Gosod dewisiadau o ran cwcis",#}
+{#            'confirmationButtonText': 'PLACEHOLDER WELSH Cuddio hwn',#}
+{#            'lang': 'cy'#}
+{#        })#}
+{#    }}#}
+{#{%- endblock -%}#}
