--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -71,6 +71,17 @@
             }
         ]
 }-%}
+
+{#    LANGUAGE TOGGGLE CODE, CAN'T BE COMMENTED OUT IN PLACE#}
+{#                'url': '/cy' + page_url,#}
+{#                'ISOCode': 'cy',#}
+{#                'text': 'Cymraeg',#}
+{#                'buttonAriaLabel': 'Dewisydd iaith. Iaith gyfredol: Cymraeg',#}
+{#                'chooseLanguage': 'Dewiswch iaith',#}
+{#                'allLanguages': 'Pob iaith',#}
+{#                'current': false#}
+
+
 {%- endif -%}
 
 {%- set pageConfig = {
