--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -42,15 +42,11 @@
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
-                        'url': domain_url_cy + '/datganiad-hygyrchedd/'
+                        'url': 'https://cy.ons.gov.uk/help/accessibility'
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
                         'url': domain_url_cy + '/privacy-and-data-protection/'
-                    },
-                    {
-                        'text': 'PLACEHOLDER WELSH Telerau ac amodau',
-                        'url': domain_url_cy + '/telerau-ac-amodau/'
                     }
                 ]
             }
