Updated the 'About ONS studies' link

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -24,7 +24,7 @@
                 'itemsList': [
                     {
                         'text': 'PLACEHOLDER WELSH About ONS studies',
-                        'url': domain_url_cy + '/studies/'
+                        'url': 'https://cy.ons.gov.uk/surveys/informationforhouseholdsandindividuals'
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Cysylltu â ni',
