Replace Welsh urls and remove Terms and Conditions link (#70)
* Replace Welsh urls and remove Terms and Conditions link

* Ignore pipevn warning

* Updated the 'About ONS studies' link

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -24,7 +24,7 @@
                 'itemsList': [
                     {
                         'text': 'PLACEHOLDER WELSH About ONS studies',
-                        'url': domain_url_cy + '/studies/'
+                        'url': 'https://cy.ons.gov.uk/surveys/informationforhouseholdsandindividuals'
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Cysylltu â ni',
@@ -42,15 +42,11 @@
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
-                        'url': domain_url_cy + '/datganiad-hygyrchedd/'
+                        'url': 'https://cy.ons.gov.uk/help/accessibility'
                     },
                     {
                         'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
                         'url': domain_url_cy + '/privacy-and-data-protection/'
-                    },
-                    {
-                        'text': 'PLACEHOLDER WELSH Telerau ac amodau',
-                        'url': domain_url_cy + '/telerau-ac-amodau/'
                     }
                 ]
             }
