Remove all reference to DOMAIN_URL_CY

--- a/app/templates/start-too-many-requests.html
+++ b/app/templates/start-too-many-requests.html
@@ -7,7 +7,7 @@
 {%- if display_region == 'cy' -%}
     {%- set breadcrumb_items = [
                 {
-                    "url": domain_url_cy,
+                    "url": domain_url_en + '/cy',
                     "text": 'Hafan'
                 }
             ]
