Pass display_region to templates

--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -1,4 +1,4 @@
-{%- extends 'base-en' + '.html' -%}
+{%- extends 'base-' + display_region + '.html' -%}
 {% from "components/radios/_macro.njk" import onsRadios %}
 {% from "components/button/_macro.njk" import onsButton %}
 {% from "components/panel/_macro.njk" import onsPanel %}
