--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -1,4 +1,4 @@
-{%- extends 'base-en' + '.html' -%}
+{%- extends 'base-' + display_region + '.html' -%}
 {% from "components/lists/_macro.njk" import onsList %}
 
 {% set page_title = "Privacy and data protection" %}
